--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <title>Grace Shopper</title>
-    
-    <script defer src="bundle.js"></script>
+
+    <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
